Fixed issue where authoring quick-reference drops to bottom of page if the screen is too small.

--- a/html/css/authoring.css
+++ b/html/css/authoring.css
@@ -25,8 +25,7 @@
 }
 
 .examples {
-    min-width: 400px;
-    
+    width: calc(40% - 20px);
 }
 
 
